# AI_language_school_based_on_Django_and_OpenAI

./: .env.example  .gitignore  MINIMAX_CLI_README.md  README.md  README_ARK.md  README_MINIMAX.md  pyproject.toml  test.py  transribe.py
ark_cli/: __init__.py  asr.py  cli.py  client.py  config.py
bals/: db.sqlite3  manage.py  requirements.txt
bals/bals/: asgi.py  settings.py  urls.py  wsgi.py
bals/locale/en/LC_MESSAGES/: django.mo  django.po
bals/locale/zh/LC_MESSAGES/: django.mo  django.po
bals/main_app/: MINIMAX_MIGRATION.md  admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
bals/main_app/migrations/: 0001_initial.py  0002_transcribed_video_created_at_and_more.py  0003_repair_missing_job_columns.py
bals/main_app/templates/main_app/: base.html  home.html  learning_material.html  transcript.html  url_input.html  wait.html
download/: .nfs0000000015680b1200001404  .nfs0000000015686cf100000980  .nfs000000001569432100001406
minimax_cli/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  exceptions.py  io_utils.py  panel.py  quota.py  regions.py  update.py
tests/: test_ark_cli.py  test_minimax_cli.py
