[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bals-language-school"
version = "0.1.0"
description = "Django language-learning app powered by Volcengine Ark."
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27",
]
