[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimax-cli"
version = "0.1.0"
description = "MiniMax China Token Plan CLI and HTTP client"
readme = "README_MINIMAX.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["httpx>=0.27"]

[project.scripts]
mmx = "minimax_cli.cli:main"

[tool.setuptools.packages.find]
include = ["minimax_cli*"]
