[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bals-ai-toolkits"
version = "0.2.0"
description = "Standalone MiniMax and Volcengine Ark clients for the BALS language school"
readme = "README_MINIMAX.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["httpx>=0.27", "aiohttp>=3.9"]

[project.scripts]
mmx = "minimax_cli.cli:main"
ark = "ark_cli.cli:main"

[tool.setuptools.packages.find]
include = ["minimax_cli*", "ark_cli*"]
